tests/error/tracing_errors/bad_binary1@python313.err
Traceback (most recent call last):
  File "$FILE", line 12, in <module>
    module.compile()
    ~~~~~~~~~~~~~~^^
  File "$FILE", line 9, in test
    return x + (2, 3)
           ~~^~~~~~~~
TypeError: Operator not defined: Binary operator `+` not defined for `int` and `(int, int)`
